--- a/BankManagementSys/SetupNewRate.xaml
+++ b/BankManagementSys/SetupNewRate.xaml
@@ -7,8 +7,9 @@
         mc:Ignorable="d"
         Title="Setup New Rate" Height="133.381" Width="285.814">
     <Grid>
-        <Label Name="lblInformation" Content="New monthly fee/interest rate:" HorizontalAlignment="Left" Margin="20,22,0,0" VerticalAlignment="Top"/>
-        <TextBox Name="tbNewRate" KeyDown="tbNewRate_KeyDown" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="54" Margin="196,25,0,0"/>
+        <Image Margin="23,48,212,18" Source="/SharedCode;Component/Images/percentage.png"/>
+        <Label Name="lblInformation" Content="New monthly fee/interest rate:" HorizontalAlignment="Left" Margin="20,15,0,0" VerticalAlignment="Top"/>
+        <TextBox Name="tbNewRate" KeyDown="tbNewRate_KeyDown" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="54" Margin="196,18,0,0"/>
         <Button Content="Cancel" IsCancel="True" HorizontalAlignment="Left" Margin="175,62,0,0" VerticalAlignment="Top" Width="75"/>
         <Button Name="btOK" Click="btOK_Click" Content="OK" IsDefault="True" HorizontalAlignment="Left" Margin="95,62,0,0" VerticalAlignment="Top" Width="75"/>
     </Grid>
